bdr.BDR.scala.error
Erreur de compilation :
BDR:1: error: Missing closing brace `}' assumed here
if (estSurMessage()) {if (litMessage() = "R") {droite()}
^BDR:1: error: Missing closing brace `}' assumed here
if (estSurMessage()) {if (litMessage() = "R") {droite()}
^BDR:1: error: expected class or object definition
if (estSurMessage()) {if (litMessage() = "R") {droite()}
^